# orbit-operator

./: .gitignore  Containerfile  Makefile  README.md  build-push.sh  pyproject.toml
bundle/: bundle.Dockerfile
bundle/manifests/: orbit-operator.clusterserviceversion.yaml
bundle/metadata/: annotations.yaml
config/crd/: orbit.redhat.com_orbitinstances.yaml
config/manager/: deployment.yaml
config/rbac/: role.yaml  role_binding.yaml  service_account.yaml
config/samples/: orbit_v1alpha1_orbitinstance.yaml
orbit_operator/: __init__.py  main.py
orbit_operator/handlers/: create.py  delete.py  status.py  update.py
orbit_operator/resources/: auth.py  backend.py  celery.py  configmap.py  frontend.py  migration.py  oauth2proxy.py  postgres.py  redis.py  route.py  secrets.py
orbit_operator/utils/: labels.py  ocp.py
